# rmellipse

./: .gitignore  .gitlab-ci.yml  CODEMETA.yaml  CODEOWNERS  README.md  dev_deps.txt  pyproject.toml
docs/examples/: GALLERY_HEADER.rst
docs/examples/Examples/: GALLERY_HEADER.rst  plot_e00_SOL.py
docs/source/: conf.py  reroute_to_stable.html  spelling_wordlist.txt
docs/source/cli/: index.rst
sol_demo_data/: Dut.s1p  Load.s1p  Open.s1p  Short.s1p
src/rmellipse/: _cli.py
stable/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
stable/.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
stable/_modules/: index.html
stable/_sources/: sg_execution_times.rst.txt
stable/_static/: documentation_options.js
stable/auto_examples/: index.html  sg_execution_times.html
stable/autoapi/: index.html
stable/for_contributors/: dev_tools.html  index.html
tests/: readme.txt  test_GroupSaveable.py  test_RMEMeas.py  test_RMEMeas_XML.py  test_RMEMeas_fitting.py  test_RMEProp.py  test_arrschema.py  test_workflow_hello.py
tests/arrsamples/: .gitignore  load.s2p
tests/const/: 24splitter_proto.h5  Load.meas  tests.hdf5
tests/workflow-hello/: .gitignore  .rmeinclude  hello-fail.rme.yml  hello.rme.yml  pmap.json  pyproject.toml  rmeproject.yml
tools/: docs.sh  profile.sh  test.sh
v0.3.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.3.4/.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
v0.3.4/_modules/: index.html
v0.3.4/_sources/: index.rst.txt  sg_execution_times.rst.txt
v0.3.4/auto_examples/: index.html  sg_execution_times.html
v0.3.4/autoapi/: index.html
v0.3.4/for_contributors/: dev_tools.html  index.html
(+159 files in other folders)
